# cajete-scratch

./: .gitignore  CMakeLists.txt  README.md
Catch_tests/: CMakeLists.txt  alloc-test.cpp  cell-complex-test.cpp  graph-test.cpp  grid-test.cpp  node-list-test.cpp  resource-test.cpp  simple-cell-list-test.cpp  tests-main.cpp
SimpleCajete_lib/: CMakeLists.txt  Cajete_NodeList.hpp  Cajete_NodeTypes.hpp  aosoa_resource.hpp  binner.hpp  cell_complex.hpp  graph.hpp  graph_alloc.hpp  grid.cpp  grid.hpp  indexed_memory_resource.hpp  ll_cell_list.hpp  mt_inits.hpp  particle_array.hpp  resource.hpp  utils.hpp  visualization.hpp
cell_list_simple/: CMakeLists.txt  cell_list_simple.cpp  grid.hpp
examples/: CMakeLists.txt  aosoa_stuff.cpp  cell_list1D.cpp  graph_types.cpp  hier_ssa.cpp  parallel_graph.cpp  parallel_vector.cpp  performance_tests.cpp  pooled_allocate.cpp  slice_pack.cpp  virtual.cpp
python_scratch/: cell_list.py  graph_shuffle.py
scripts/: construct-cpu.sh  construct-gpu.sh
