#set(SOURCE_FILES cell_list1D.cpp)
#set(EXEC cell_list1D)

#add_executable(${EXEC} ${SOURCE_FILES})

#target_link_libraries(${EXEC} Cabana::cabanacore)

add_executable(cell_list1D cell_list1D.cpp)
add_executable(hier_ssa hier_ssa.cpp)
add_executable(performance_tests performance_tests.cpp)
add_executable(parallel_vector parallel_vector.cpp)
add_executable(pooled_allocate pooled_allocate.cpp)
add_executable(graph_types graph_types.cpp)
add_executable(parallel_graph parallel_graph.cpp)
add_executable(slice_pack slice_pack.cpp)
add_executable(virtual virtual.cpp)

target_link_libraries(cell_list1D Cabana::cabanacore)
target_link_libraries(hier_ssa Cabana::cabanacore)
target_link_libraries(performance_tests Cabana::cabanacore)
target_link_libraries(parallel_vector Cabana::cabanacore)
target_link_libraries(pooled_allocate Cabana::cabanacore)
target_link_libraries(graph_types Cabana::cabanacore)
target_link_libraries(parallel_graph Cabana::cabanacore)
target_link_libraries(slice_pack Cabana::cabanacore)
target_link_libraries(virtual Cabana::cabanacore)
